@@ -3,15 +3,7 @@
 
 #include <sqlrelay/sqlrutil.h>
 
-#include <rudiments/signalclasses.h>
-#include <rudiments/listener.h>
-#include <rudiments/unixsocketserver.h>
-#include <rudiments/inetsocketserver.h>
-#include <rudiments/unixsocketclient.h>
 #include <rudiments/filedescriptor.h>
-#include <rudiments/semaphoreset.h>
-#include <rudiments/sharedmemory.h>
-#include <rudiments/regularexpression.h>
 #include <rudiments/thread.h>
 #include <rudiments/memorypool.h>
 #include <rudiments/stringbuffer.h>
@@ -20,7 +12,6 @@
 #include <rudiments/dictionary.h>
 #include <rudiments/xmldom.h>
 #include <rudiments/xmldomnode.h>
-#include <rudiments/dynamiclib.h>
 #include <rudiments/gss.h>
 #include <rudiments/tls.h>
 
@@ -37,10 +28,3 @@
 #endif
 
 #include <sqlrelay/private/sqlrshm.h>
-
-class SQLRSERVER_DLLSPEC handoffsocketnode {
-	friend class sqlrlistener;
-	private:
-		uint32_t	pid;
-		filedescriptor	*sock;
-};
