@@ -28,6 +28,7 @@
 	added support for negative times in mysql connection module and
 		drop-in library
 	added translation-failure event
+	moved private members and support classes into server API's .cpp files
 
 0.66.0 - fixed mysql set isolation level query
 	updated mysql connection to run commit/rollback at the end of every
